# Sorthelper

./: .gitignore  makefile  meson.build
catalog/: SortHelper.xml
data/: ArchiveView.ui  AudioView.ui  ComicView.ui  DefaultView.ui  EmptyView.ui  ImageFullView.ui  MainWindow.ui  MainWindow.ui.bak  VideoView.ui  WebView.ui  WelcomeView.ui  org.df458.sorthelper.gschema.xml  sorthelper.gresource.xml
doc/: TODO.md
doc/mockups/: #Main Window.glade#  Main Window.glade  Main Window.glade~
src/: AddFolderPopover.vala  DirDialog.vala  DirItem.vala  ImageFullView.vala  ImageSetView.vala  Init.vala  ItemList.vala  MainWindow.vala  OpenFolderPopover.vala  SettingsPane.vala  SortHelper.vala  UndoList.vala  View.vala  main.vala  meson.build
src/Views/: .WebView.vala.swp  ArchiveView.vala  AudioView.vala  ComicView.vala  DefaultView.vala  EmptyView.vala  ImageFullView.vala  ImageSetView.vala  VideoView.vala  View.vala  WebView.vala  WelcomeView.vala
subprojects/: dflib.wrap
